methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:10: error: value update is not a member of Boolean
                       {if (isFacingTrail()=true) {avance()}
                            ^